# elf_parser

./: Cargo.toml  LICENSE-MIT  README.md
src/: elf32.rs  elf64.rs  lib.rs  main.rs  types.rs  util.rs
tests/: ehdr_test.rs  phdr_test.rs  shdr_test.rs
tests/data/: elf32  elf64  not_elf
